[package]
name = "ruby-linter-rs"
authors = ["manabeai <matsu.devtool@gmail.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[[bin]]
name = "ruby-linter"
path = "src/main.rs"

[lib]
name = "ruby_linter_rs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[target.wasm32-unknown-emscripten]
# Enable emscripten features
rustflags = ["-C", "target-feature=+atomics,+bulk-memory,+mutable-globals"]

[dependencies]
anyhow = "1"
ruby-prism = "1.4.0"
spin-sdk = "3.1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace]
